--- a/smoky/account.html
+++ b/smoky/account.html
@@ -1654,35 +1654,6 @@
 				<div class="sideconstructor">
 					<a href=""><img src="img/constructor.png" alt=""></a>
 				</div>
-				<div class="sideinfo">
-					<h2 class="sideinfo__title">полезная информация</h2>
-					<div class="sideinfo_box">
-						<div class="sideinfo__item">
-							<a href="#ex1">ИНФОРМАЦИЯ О КОМПАНИИ</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex2">ИЗ ЧЕГО СОСТОИТ КАЛЬЯН</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex3">КАКОЙ КАЛЬЯН ВЫБРАТЬ?</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex4">Классификация кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex5">Размеры кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex6">Названия и виды кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-					</div>
-				</div>
 				<div class="sidevideo">
 					<h2 class="sidevideo__title">видео</h2>
 					<div class="sidevideo__box sidevideo__box_1">
@@ -1805,14 +1776,26 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
+										<div class="popular__name">
+											<p>Кальян Алладин</p>
+										</div>
+										<div class="popular__price pprice">
+											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
+											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
+										</div>
+										<a href=""><img src="" alt=""></a>
+									</div>
+								</div>
+								<div class="dropdown__boxitem">
+									<div class="popular__item">
+										<div class="popular__top">
+											<span class="popular__stiker">-25%</span>
+											<div class="popular__timer">
+												<span>20:30:46</span>
+											</div>
+										</div>
+										<div class="popular__img">
+											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -1835,15 +1818,6 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
 										</div>
@@ -1864,45 +1838,6 @@
 										</div>
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
-										<div class="popular__name">
-											<p>Кальян Алладин</p>
-										</div>
-										<div class="popular__price pprice">
-											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
-											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
-										</div>
-										<a href=""><img src="" alt=""></a>
-									</div>
-								</div>
-								<div class="dropdown__boxitem">
-									<div class="popular__item">
-										<div class="popular__top">
-											<span class="popular__stiker">-25%</span>
-											<div class="popular__timer">
-												<span>20:30:46</span>
-											</div>
-										</div>
-										<div class="popular__img">
-											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -2391,7 +2326,7 @@
 						<a href="">Каталог</a>
 						<i class="fa fa-caret-up" aria-hidden="true"></i>
 					</li>
-					<nav class="sidenav__item">
+					<!-- <nav class="sidenav__item">
 						<ul>
 							<li>
 								<div class="sidenav__text">
@@ -4015,7 +3950,7 @@
 								<img src="img/icon_more-g.svg" alt="" class="sidenav__more">
 							</li>
 						</ul>
-					</nav>
+					</nav> -->
 					<li>
 						<a href="">Главная</a>
 					</li>
@@ -4040,12 +3975,15 @@
 					<li>
 						<a href="">Гарантии</a>
 					</li>
+					<li>
+						<a href="">Конструктор</a>
+					</li>
 				</div>
 			</div>
 			<div class="header__side"><i class="fa fa-bars" aria-hidden="true"></i></div>
 			<div class="overlay overlay_2"></div>
 			<div class="header__logo">
-				<a href=""><img src="img/logo.png" alt=""></a>
+				<a href=""><img src="img/logo.svg" alt=""></a>
 			</div>
 			<div class="header__cont">
 				<div class="header__toogle">
@@ -4300,7 +4238,7 @@
 		<div class="wrapper">
 			<div class="footer__box">
 				<div class="header__logo">
-					<img src="img/logo.png" alt="">
+					<img src="img/logo.svg" alt="">
 				</div>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
 				<a href="tel:+8 (800) 555-35-35" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a><br>
