--- a/smoky/balance.html
+++ b/smoky/balance.html
@@ -1654,35 +1654,6 @@
 				<div class="sideconstructor">
 					<a href=""><img src="img/constructor.png" alt=""></a>
 				</div>
-				<div class="sideinfo">
-					<h2 class="sideinfo__title">полезная информация</h2>
-					<div class="sideinfo_box">
-						<div class="sideinfo__item">
-							<a href="#ex1">ИНФОРМАЦИЯ О КОМПАНИИ</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex2">ИЗ ЧЕГО СОСТОИТ КАЛЬЯН</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex3">КАКОЙ КАЛЬЯН ВЫБРАТЬ?</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex4">Классификация кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex5">Размеры кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex6">Названия и виды кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-					</div>
-				</div>
 				<div class="sidevideo">
 					<h2 class="sidevideo__title">видео</h2>
 					<div class="sidevideo__box sidevideo__box_1">
@@ -1805,14 +1776,26 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
+										<div class="popular__name">
+											<p>Кальян Алладин</p>
+										</div>
+										<div class="popular__price pprice">
+											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
+											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
+										</div>
+										<a href=""><img src="" alt=""></a>
+									</div>
+								</div>
+								<div class="dropdown__boxitem">
+									<div class="popular__item">
+										<div class="popular__top">
+											<span class="popular__stiker">-25%</span>
+											<div class="popular__timer">
+												<span>20:30:46</span>
+											</div>
+										</div>
+										<div class="popular__img">
+											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -1835,15 +1818,6 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
 										</div>
@@ -1864,45 +1838,6 @@
 										</div>
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
-										<div class="popular__name">
-											<p>Кальян Алладин</p>
-										</div>
-										<div class="popular__price pprice">
-											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
-											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
-										</div>
-										<a href=""><img src="" alt=""></a>
-									</div>
-								</div>
-								<div class="dropdown__boxitem">
-									<div class="popular__item">
-										<div class="popular__top">
-											<span class="popular__stiker">-25%</span>
-											<div class="popular__timer">
-												<span>20:30:46</span>
-											</div>
-										</div>
-										<div class="popular__img">
-											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -2053,9 +1988,11 @@
 						<a href="">Списки сравнения</a>
 					</div>
 					<div class="balance">
-						<h2 class="main__title">Списки сравнения</h2>
-						<div class="wishlist__butts balance__butts">
-							<button class="showmore">Очистить всё</button>
+						<div class="balance__box">
+							<h2 class="main__title">Списки сравнения</h2>
+							<div class="wishlist__butts balance__butts">
+								<button class="showmore">Очистить всё</button>
+							</div>
 						</div>
 						<h3 class="main__subtitle">Кальяны:</h3>
 						<div class="wishlist__goods balance__goods">
@@ -2068,15 +2005,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop1.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян Алладин</p>
@@ -2108,15 +2036,6 @@
 								<div class="popular__img">
 									<img src="img/pop2.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Чашка для кальяна из<br> глины «Фаянс» № 1</p>
 								</div>
@@ -2146,15 +2065,6 @@
 								<div class="popular__img">
 									<img src="img/pop3.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян «Sirius»</p>
 								</div>
@@ -2182,15 +2092,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop4.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян «Chrome»</p>
@@ -2221,15 +2122,6 @@
 								<div class="popular__img">
 									<img src="img/pop3.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян «Sirius»</p>
 								</div>
@@ -2257,15 +2149,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop4.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян «Chrome»</p>
@@ -2303,15 +2186,6 @@
 								<div class="popular__img">
 									<img src="img/pop1.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян Алладин</p>
 								</div>
@@ -2342,15 +2216,6 @@
 								<div class="popular__img">
 									<img src="img/pop2.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Чашка для кальяна из<br> глины «Фаянс» № 1</p>
 								</div>
@@ -2380,15 +2245,6 @@
 								<div class="popular__img">
 									<img src="img/pop3.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян «Sirius»</p>
 								</div>
@@ -2416,15 +2272,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop4.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян «Chrome»</p>
@@ -2455,15 +2302,6 @@
 								<div class="popular__img">
 									<img src="img/pop3.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян «Sirius»</p>
 								</div>
@@ -2491,15 +2329,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop4.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян «Chrome»</p>
@@ -2718,7 +2547,7 @@
 						<a href="">Каталог</a>
 						<i class="fa fa-caret-up" aria-hidden="true"></i>
 					</li>
-					<nav class="sidenav__item">
+					<!-- <nav class="sidenav__item">
 						<ul>
 							<li>
 								<div class="sidenav__text">
@@ -4342,7 +4171,7 @@
 								<img src="img/icon_more-g.svg" alt="" class="sidenav__more">
 							</li>
 						</ul>
-					</nav>
+					</nav> -->
 					<li>
 						<a href="">Главная</a>
 					</li>
@@ -4367,12 +4196,15 @@
 					<li>
 						<a href="">Гарантии</a>
 					</li>
+					<li>
+						<a href="">Конструктор</a>
+					</li>
 				</div>
 			</div>
 			<div class="header__side"><i class="fa fa-bars" aria-hidden="true"></i></div>
 			<div class="overlay overlay_2"></div>
 			<div class="header__logo">
-				<a href=""><img src="img/logo.png" alt=""></a>
+				<a href=""><img src="img/logo.svg" alt=""></a>
 			</div>
 			<div class="header__cont">
 				<div class="header__toogle">
@@ -4627,7 +4459,7 @@
 		<div class="wrapper">
 			<div class="footer__box">
 				<div class="header__logo">
-					<img src="img/logo.png" alt="">
+					<img src="img/logo.svg" alt="">
 				</div>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
 				<a href="tel:+8 (800) 555-35-35" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a><br>
