--- a/smoky/cart.html
+++ b/smoky/cart.html
@@ -1653,35 +1653,6 @@
 				<div class="sideconstructor">
 					<a href=""><img src="img/constructor.png" alt=""></a>
 				</div>
-				<div class="sideinfo">
-					<h2 class="sideinfo__title">полезная информация</h2>
-					<div class="sideinfo_box">
-						<div class="sideinfo__item">
-							<a href="#ex1">ИНФОРМАЦИЯ О КОМПАНИИ</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex2">ИЗ ЧЕГО СОСТОИТ КАЛЬЯН</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex3">КАКОЙ КАЛЬЯН ВЫБРАТЬ?</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex4">Классификация кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex5">Размеры кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex6">Названия и виды кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-					</div>
-				</div>
 				<div class="sidevideo">
 					<h2 class="sidevideo__title">видео</h2>
 					<div class="sidevideo__box sidevideo__box_1">
@@ -1804,14 +1775,26 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
+										<div class="popular__name">
+											<p>Кальян Алладин</p>
+										</div>
+										<div class="popular__price pprice">
+											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
+											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
+										</div>
+										<a href=""><img src="" alt=""></a>
+									</div>
+								</div>
+								<div class="dropdown__boxitem">
+									<div class="popular__item">
+										<div class="popular__top">
+											<span class="popular__stiker">-25%</span>
+											<div class="popular__timer">
+												<span>20:30:46</span>
+											</div>
+										</div>
+										<div class="popular__img">
+											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -1834,15 +1817,6 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
 										</div>
@@ -1863,45 +1837,6 @@
 										</div>
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
-										<div class="popular__name">
-											<p>Кальян Алладин</p>
-										</div>
-										<div class="popular__price pprice">
-											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
-											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
-										</div>
-										<a href=""><img src="" alt=""></a>
-									</div>
-								</div>
-								<div class="dropdown__boxitem">
-									<div class="popular__item">
-										<div class="popular__top">
-											<span class="popular__stiker">-25%</span>
-											<div class="popular__timer">
-												<span>20:30:46</span>
-											</div>
-										</div>
-										<div class="popular__img">
-											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -2141,7 +2076,7 @@
 							</div>
 							<div class="carttable__row">
 								<div class="carttable__col carttable__col_1">
-									<div class="carttable__item">
+									<div class="carttable__item carttable__item_m">
 										<div class="carttable__img">
 											<img src="img/pop6.jpg" alt="">
 										</div>
@@ -2190,7 +2125,7 @@
 							</div>
 							<div class="carttable__row">
 								<div class="carttable__col carttable__col_1">
-									<div class="carttable__item">
+									<div class="carttable__item carttable__item_m">
 										<div class="carttable__img">
 											<img src="img/gift.png" alt="">
 										</div>
@@ -2238,6 +2173,238 @@
 								</div>
 							</div>
 						</div>
+						<div class="carttable carttable__mob">
+							<div class="carttable__row carttable__row_title">
+								<div class="carttable__col carttable__col_1">
+									<h2 class="carttable__title">
+										Товары
+									</h2>
+								</div>
+							</div>
+							<div class="carttable__row">
+								<div class="carttable__col carttable__col_1">
+									<div class="carttable__item carttable__item_m">
+										<div class="carttable__img">
+											<img src="img/pop1.jpg" alt="">
+										</div>
+										<div class="carttable__info">
+											<h3 class="carttable__name">
+												Кальян Алладин
+											</h3>
+											<div class="carttable__color">
+												<span>Цвет:</span>
+												<div class="colorbox_blu2 colorbox__item"></div>
+											</div>
+										</div>
+									</div>
+									<div class="carttable__col">
+										<div class="carttable__item carttable__item_c">
+											<p class="carttable__text">3 599 руб.</p>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_6">
+										<div class="carttable__item carttable__showmore">
+											<div class="carttable__remove carttable__remove_mob carttable__remove_mob1">
+												<img width="9px" src="img/arrow.png" alt="">
+											</div>
+										</div>
+										<div class="carttable__item carttable__item_c">
+											<div class="carttable__remove carttable__remove_mob">
+												<img src="img/close1.png" alt="">
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="carttable__mobbox carttable__mobbox1">
+									<div class="carttable__col carttable__col_2">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Скидка:
+											</h2>
+											<p class="carttable__text carttable__text2">25%</p>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_3">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Цена:
+											</h2>
+											<p class="carttable__text carttable__text2">4 800 руб.</p>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_4">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Качество:
+											</h2>
+											<div class="popular__amount">
+												<span>
+													<i class="fa fa-minus" aria-hidden="true"></i>
+												</span>
+												<input type="text" tabindex="0">
+												<span>
+													<i class="fa fa-plus" aria-hidden="true"></i>
+												</span>
+											</div>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_5">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Стоимость:
+											</h2>
+											<p class="carttable__text carttable__text2">3 599 руб.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="carttable__row">
+								<div class="carttable__col carttable__col_1">
+									<div class="carttable__item carttable__item_m">
+										<div class="carttable__img">
+											<img src="img/pop6.jpg" alt="">
+										</div>
+										<div class="carttable__info">
+											<h3 class="carttable__name">
+												Уголь для кальяна «Cocolemon» 96 кубиков
+											</h3>
+										</div>
+									</div>
+									<div class="carttable__col">
+										<div class="carttable__item carttable__item_c">
+											<p class="carttable__text">1 800 руб.</p>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_6">
+										<div class="carttable__item carttable__showmore">
+											<div class="carttable__remove carttable__remove_mob carttable__remove_mob2">
+												<img width="9px" src="img/arrow.png" alt="">
+											</div>
+										</div>
+										<div class="carttable__item carttable__item_c">
+											<div class="carttable__remove carttable__remove_mob">
+												<img src="img/close1.png" alt="">
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="carttable__mobbox carttable__mobbox2">
+									<div class="carttable__col carttable__col_2">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Скидка:
+											</h2>
+											<p class="carttable__text carttable__text2">0%</p>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_3">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Цена:
+											</h2>
+											<p class="carttable__text carttable__text2">450 руб.</p>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_4">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Качество:
+											</h2>
+											<div class="popular__amount">
+												<span>
+													<i class="fa fa-minus" aria-hidden="true"></i>
+												</span>
+												<input type="text" tabindex="0">
+												<span>
+													<i class="fa fa-plus" aria-hidden="true"></i>
+												</span>
+											</div>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_5">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Стоимость:
+											</h2>
+											<p class="carttable__text carttable__text2">1 800 руб.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="carttable__row">
+								<div class="carttable__col carttable__col_1">
+									<div class="carttable__item carttable__item_m">
+										<div class="carttable__img">
+											<img src="img/gift.png" alt="">
+										</div>
+										<div class="carttable__info">
+											<h3 class="carttable__name">
+												Подарок от Smoky Shop
+											</h3>
+										</div>
+									</div>
+									<div class="carttable__col">
+										<div class="carttable__item carttable__item_c">
+											<p class="carttable__text">0 руб.</p>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_6">
+										<div class="carttable__item carttable__showmore">
+											<div class="carttable__remove carttable__remove_mob  carttable__remove_mob3">
+												<img width="9px" src="img/arrow.png" alt="">
+											</div>
+										</div>
+										<div class="carttable__item carttable__item_c">
+											<div class="carttable__remove carttable__remove_mob">
+												<img src="img/close1.png" alt="">
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="carttable__mobbox carttable__mobbox3">
+									<div class="carttable__col carttable__col_2">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Скидка:
+											</h2>
+											<p class="carttable__text carttable__text2">0%</p>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_3">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Цена:
+											</h2>
+											<p class="carttable__text carttable__text2">0 руб.</p>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_4">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Качество:
+											</h2>
+											<div class="popular__amount">
+												<span>
+													<i class="fa fa-minus" aria-hidden="true"></i>
+												</span>
+												<input type="text" tabindex="0">
+												<span>
+													<i class="fa fa-plus" aria-hidden="true"></i>
+												</span>
+											</div>
+										</div>
+									</div>
+									<div class="carttable__col carttable__col_5">
+										<div class="carttable__item carttable__item_c">
+											<h2 class="carttable__title carttable__subtitle">
+												Стоимость:
+											</h2>
+											<p class="carttable__text carttable__text2">0 руб.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="cart__cont">
 						<div class="perinfo">
@@ -2257,6 +2424,10 @@
 									<input type="text" placeholder="Введите фамилию">
 								</div>
 								<div class="perinfo__input">
+									<label for="">E-mail<span>*</span></label>
+									<input type="email" placeholder="Введите e-mail">
+								</div>
+								<div class="perinfo__input">
 									<label for="">Контактный телефон<span>*</span></label>
 									<input class="perinfo_phone1" type="text" value="+7">
 									<div class="perinfo__p2cont">
@@ -2267,10 +2438,6 @@
 								<div class="perinfo__input">
 									<label for="">Полный адрес<span>*</span></label>
 									<input type="text" placeholder="75112, г. Москва, ул. Ленина 25/17">
-								</div>
-								<div class="perinfo__input">
-									<label for="">E-mail<span>*</span></label>
-									<input type="email" placeholder="Введите e-mail">
 								</div>
 								<div class="perinfo__input">
 									<label for="">Комментарий</label>
@@ -2437,8 +2604,8 @@
 							<input type="email" placeholder="example@google.com">
 						</div>
 						<div class="loginpop__input">
-							<p>Электронная почта (E-mail)*</p>
-							<input type="email" placeholder="example@google.com">
+							<p>Пароль*</p>
+							<input type="password" placeholder="Введите пароль">
 						</div>
 						<div class="loginpop__input">
 							<p>Пароль*</p>
@@ -2601,7 +2768,7 @@
 						<a href="">Каталог</a>
 						<i class="fa fa-caret-up" aria-hidden="true"></i>
 					</li>
-					<nav class="sidenav__item">
+					<!-- <nav class="sidenav__item">
 						<ul>
 							<li>
 								<div class="sidenav__text">
@@ -4225,7 +4392,7 @@
 								<img src="img/icon_more-g.svg" alt="" class="sidenav__more">
 							</li>
 						</ul>
-					</nav>
+					</nav> -->
 					<li>
 						<a href="">Главная</a>
 					</li>
@@ -4250,12 +4417,15 @@
 					<li>
 						<a href="">Гарантии</a>
 					</li>
+					<li>
+						<a href="">Конструктор</a>
+					</li>
 				</div>
 			</div>
 			<div class="header__side"><i class="fa fa-bars" aria-hidden="true"></i></div>
 			<div class="overlay overlay_2"></div>
 			<div class="header__logo">
-				<a href=""><img src="img/logo.png" alt=""></a>
+				<a href=""><img src="img/logo.svg" alt=""></a>
 			</div>
 			<div class="header__cont">
 				<div class="header__toogle">
@@ -4510,7 +4680,7 @@
 		<div class="wrapper">
 			<div class="footer__box">
 				<div class="header__logo">
-					<img src="img/logo.png" alt="">
+					<img src="img/logo.svg" alt="">
 				</div>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
 				<a href="tel:+8 (800) 555-35-35" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a><br>
