--- a/smoky/cart_goods.html
+++ b/smoky/cart_goods.html
@@ -1654,35 +1654,6 @@
 				<div class="sideconstructor">
 					<a href=""><img src="img/constructor.png" alt=""></a>
 				</div>
-				<div class="sideinfo">
-					<h2 class="sideinfo__title">полезная информация</h2>
-					<div class="sideinfo_box">
-						<div class="sideinfo__item">
-							<a href="#ex1">ИНФОРМАЦИЯ О КОМПАНИИ</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex2">ИЗ ЧЕГО СОСТОИТ КАЛЬЯН</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex3">КАКОЙ КАЛЬЯН ВЫБРАТЬ?</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex4">Классификация кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex5">Размеры кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex6">Названия и виды кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-					</div>
-				</div>
 				<div class="sidevideo">
 					<h2 class="sidevideo__title">видео</h2>
 					<div class="sidevideo__box sidevideo__box_1">
@@ -1805,14 +1776,26 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
+										<div class="popular__name">
+											<p>Кальян Алладин</p>
+										</div>
+										<div class="popular__price pprice">
+											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
+											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
+										</div>
+										<a href=""><img src="" alt=""></a>
+									</div>
+								</div>
+								<div class="dropdown__boxitem">
+									<div class="popular__item">
+										<div class="popular__top">
+											<span class="popular__stiker">-25%</span>
+											<div class="popular__timer">
+												<span>20:30:46</span>
+											</div>
+										</div>
+										<div class="popular__img">
+											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -1835,15 +1818,6 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
 										</div>
@@ -1864,45 +1838,6 @@
 										</div>
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
-										<div class="popular__name">
-											<p>Кальян Алладин</p>
-										</div>
-										<div class="popular__price pprice">
-											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
-											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
-										</div>
-										<a href=""><img src="" alt=""></a>
-									</div>
-								</div>
-								<div class="dropdown__boxitem">
-									<div class="popular__item">
-										<div class="popular__top">
-											<span class="popular__stiker">-25%</span>
-											<div class="popular__timer">
-												<span>20:30:46</span>
-											</div>
-										</div>
-										<div class="popular__img">
-											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -2154,9 +2089,9 @@
 									</div>
 									<div class="description__item">
 										<p class="description__p">
-											Достоинства: хороший кальян, много дыма, курить можно даже в большой компании<br>
-											Недостатки: получилась накладка с чашкой.<br>
-											Комментарий: Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+											<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
+											<b>Недостатки:</b> получилась накладка с чашкой.<br>
+											<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
 										</p>
 									</div>
 								</div>
@@ -2181,9 +2116,9 @@
 									</div>
 									<div class="description__item">
 										<p class="description__p">
-											Достоинства: Высокий, удобный, приятная цена<br>
-											Недостатки: Неудобные щипцы в комплекте<br>
-											Комментарий: Отличный подарок) быстрая доставка) приятно сотрудничать
+											<b>Достоинства:</b> Высокий, удобный, приятная цена<br>
+											<b>Недостатки:</b> Неудобные щипцы в комплекте<br>
+											<b>Комментарий:</b> Отличный подарок) быстрая доставка) приятно сотрудничать
 										</p>
 									</div>
 								</div>
@@ -2206,9 +2141,9 @@
 									</div>
 									<div class="description__item">
 										<p class="description__p">
-											Достоинства: хороший кальян, много дыма, курить можно даже в большой компании<br>
-											Недостатки: получилась накладка с чашкой.<br>
-											Комментарий: Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
+											<b>Достоинства:</b> хороший кальян, много дыма, курить можно даже в большой компании<br>
+											<b>Недостатки:</b> получилась накладка с чашкой.<br>
+											<b>Комментарий:</b> Доброго времени суток! Заказал этот кальян для себя, доставили быстро. Но случился инцидент, так<br> как в комплекте не хватало чашки керамической. Но курьер моментально отреагировал, и доставил за считанные<br> часы, полностью бесплатно. В общем, несмотря на «косяк», он был исправлен моментально. Кальяном доволен.
 										</p>
 									</div>
 								</div>
@@ -2231,9 +2166,9 @@
 									</div>
 									<div class="description__item">
 										<p class="description__p">
-											Достоинства: 2 шланга, подходит даже для большой компании, нормальная чашка, хватает надолго.<br>
-											Недостатки: Пока не обнаружили, единственное, тяга не очень сильная, возможно, из-за 2-х трубок.<br>
-											Комментарий: Это просто удивительный кальян. Я не думала что бывают такие модели на 2 шланга. Понравился<br> ассортимент, заказала себе желтый кальянчик. Консультанты вежливо обращались, жаль, что сразу желтого не было. <br>Предложили подождать 2 дня, или выбрать другой цвет. Но я хотела желтый, ждала. Так мне в подарок прислали еще<br> и пачку табака за ожидание. Спасибо!)))
+											<b>Достоинства:</b> 2 шланга, подходит даже для большой компании, нормальная чашка, хватает надолго.<br>
+											<b>Недостатки:</b> Пока не обнаружили, единственное, тяга не очень сильная, возможно, из-за 2-х трубок.<br>
+											<b>Комментарий:</b> Это просто удивительный кальян. Я не думала что бывают такие модели на 2 шланга. Понравился<br> ассортимент, заказала себе желтый кальянчик. Консультанты вежливо обращались, жаль, что сразу желтого не было. <br>Предложили подождать 2 дня, или выбрать другой цвет. Но я хотела желтый, ждала. Так мне в подарок прислали еще<br> и пачку табака за ожидание. Спасибо!)))
 										</p>
 									</div>
 									<button class="showmore">ПОКАЗАТЬ ВСЕ</button>
@@ -2311,15 +2246,6 @@
 								<div class="popular__img">
 									<img src="img/pop1.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян Алладин</p>
 								</div>
@@ -2347,15 +2273,6 @@
 								<div class="popular__img">
 									<img src="img/pop2.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Чашка для кальяна из<br> глины «Фаянс» № 1</p>
 								</div>
@@ -2382,15 +2299,6 @@
 								<div class="popular__img">
 									<img src="img/pop3.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян «Sirius»</p>
 								</div>
@@ -2415,15 +2323,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop4.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян «Chrome»</p>
@@ -2453,15 +2352,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop1.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян Алладин</p>
@@ -2498,15 +2388,6 @@
 								<div class="popular__img">
 									<img src="img/pop1.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян Алладин</p>
 								</div>
@@ -2534,15 +2415,6 @@
 								<div class="popular__img">
 									<img src="img/pop2.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Чашка для кальяна из<br> глины «Фаянс» № 1</p>
 								</div>
@@ -2569,15 +2441,6 @@
 								<div class="popular__img">
 									<img src="img/pop3.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян «Sirius»</p>
 								</div>
@@ -2602,15 +2465,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop4.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян «Chrome»</p>
@@ -2640,15 +2494,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop1.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян Алладин</p>
@@ -2864,7 +2709,7 @@
 						<a href="">Каталог</a>
 						<i class="fa fa-caret-up" aria-hidden="true"></i>
 					</li>
-					<nav class="sidenav__item">
+					<!-- <nav class="sidenav__item">
 						<ul>
 							<li>
 								<div class="sidenav__text">
@@ -4488,7 +4333,7 @@
 								<img src="img/icon_more-g.svg" alt="" class="sidenav__more">
 							</li>
 						</ul>
-					</nav>
+					</nav> -->
 					<li>
 						<a href="">Главная</a>
 					</li>
@@ -4513,12 +4358,15 @@
 					<li>
 						<a href="">Гарантии</a>
 					</li>
+					<li>
+						<a href="">Конструктор</a>
+					</li>
 				</div>
 			</div>
 			<div class="header__side"><i class="fa fa-bars" aria-hidden="true"></i></div>
 			<div class="overlay overlay_2"></div>
 			<div class="header__logo">
-				<a href=""><img src="img/logo.png" alt=""></a>
+				<a href=""><img src="img/logo.svg" alt=""></a>
 			</div>
 			<div class="header__cont">
 				<div class="header__toogle">
@@ -4773,7 +4621,7 @@
 		<div class="wrapper">
 			<div class="footer__box">
 				<div class="header__logo">
-					<img src="img/logo.png" alt="">
+					<img src="img/logo.svg" alt="">
 				</div>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
 				<a href="tel:+8 (800) 555-35-35" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a><br>
