--- a/smoky/index.html
+++ b/smoky/index.html
@@ -1661,10 +1661,10 @@
 							<a href="#ex1">ИНФОРМАЦИЯ О КОМПАНИИ</a>
 							<i class="fa fa-angle-right" aria-hidden="true"></i>
 						</div>
-						<div class="sideinfo__item">
+						<!-- <div class="sideinfo__item">
 							<a href="#ex2">ИЗ ЧЕГО СОСТОИТ КАЛЬЯН</a>
 							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
+						</div> -->
 						<div class="sideinfo__item">
 							<a href="#ex3">КАКОЙ КАЛЬЯН ВЫБРАТЬ?</a>
 							<i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -1805,14 +1805,26 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
+										<div class="popular__name">
+											<p>Кальян Алладин</p>
+										</div>
+										<div class="popular__price pprice">
+											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
+											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
+										</div>
+										<a href=""><img src="" alt=""></a>
+									</div>
+								</div>
+								<div class="dropdown__boxitem">
+									<div class="popular__item">
+										<div class="popular__top">
+											<span class="popular__stiker">-25%</span>
+											<div class="popular__timer">
+												<span>20:30:46</span>
+											</div>
+										</div>
+										<div class="popular__img">
+											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -1835,15 +1847,6 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
 										</div>
@@ -1864,45 +1867,6 @@
 										</div>
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
-										<div class="popular__name">
-											<p>Кальян Алладин</p>
-										</div>
-										<div class="popular__price pprice">
-											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
-											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
-										</div>
-										<a href=""><img src="" alt=""></a>
-									</div>
-								</div>
-								<div class="dropdown__boxitem">
-									<div class="popular__item">
-										<div class="popular__top">
-											<span class="popular__stiker">-25%</span>
-											<div class="popular__timer">
-												<span>20:30:46</span>
-											</div>
-										</div>
-										<div class="popular__img">
-											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -2065,7 +2029,7 @@
 				</div>
 				<div class="catgoods">
 					<div class="header__logo header__logo_mob">
-						<a href=""><img src="img/logo.png" alt=""></a>
+						<a href=""><img src="img/logo.svg" alt=""></a>
 					</div>
 					<h2 class="catgoods__title">КАТАЛОГ ТОВАРОВ</h2>
 					<div class="catgoods__cont">
@@ -2161,15 +2125,6 @@
 							<div class="popular__img">
 								<img src="img/pop1.jpg" alt="">
 							</div>
-							<div class="popular__amount">
-								<span>
-									<i class="fa fa-minus" aria-hidden="true"></i>
-								</span>
-								<input type="text">
-								<span>
-									<i class="fa fa-plus" aria-hidden="true"></i>
-								</span>
-							</div>
 							<div class="popular__name">
 								<p>Кальян Алладин</p>
 							</div>
@@ -2205,15 +2160,6 @@
 							<div class="popular__img">
 								<img src="img/pop2.jpg" alt="">
 							</div>
-							<div class="popular__amount">
-								<span>
-									<i class="fa fa-minus" aria-hidden="true"></i>
-								</span>
-								<input type="text">
-								<span>
-									<i class="fa fa-plus" aria-hidden="true"></i>
-								</span>
-							</div>
 							<div class="popular__name">
 								<p>Чашка для кальяна из<br> глины «Фаянс» № 1</p>
 							</div>
@@ -2240,15 +2186,6 @@
 							<div class="popular__img">
 								<img src="img/pop3.jpg" alt="">
 							</div>
-							<div class="popular__amount">
-								<span>
-									<i class="fa fa-minus" aria-hidden="true"></i>
-								</span>
-								<input type="text">
-								<span>
-									<i class="fa fa-plus" aria-hidden="true"></i>
-								</span>
-							</div>
 							<div class="popular__name">
 								<p>Кальян «Sirius»</p>
 							</div>
@@ -2273,15 +2210,6 @@
 							</div>
 							<div class="popular__img">
 								<img src="img/pop4.jpg" alt="">
-							</div>
-							<div class="popular__amount">
-								<span>
-									<i class="fa fa-minus" aria-hidden="true"></i>
-								</span>
-								<input type="text">
-								<span>
-									<i class="fa fa-plus" aria-hidden="true"></i>
-								</span>
 							</div>
 							<div class="popular__name">
 								<p>Кальян «Chrome»</p>
@@ -2311,15 +2239,6 @@
 							</div>
 							<div class="popular__img">
 								<img src="img/pop1.jpg" alt="">
-							</div>
-							<div class="popular__amount">
-								<span>
-									<i class="fa fa-minus" aria-hidden="true"></i>
-								</span>
-								<input type="text">
-								<span>
-									<i class="fa fa-plus" aria-hidden="true"></i>
-								</span>
 							</div>
 							<div class="popular__name">
 								<p>Кальян Алладин</p>
@@ -2353,15 +2272,6 @@
 							<div class="popular__img">
 								<img src="img/pop5.jpg" alt="">
 							</div>
-							<div class="popular__amount">
-								<span>
-									<i class="fa fa-minus" aria-hidden="true"></i>
-								</span>
-								<input type="text">
-								<span>
-									<i class="fa fa-plus" aria-hidden="true"></i>
-								</span>
-							</div>
 							<div class="popular__name">
 								<p>Кальян Алладин</p>
 							</div>
@@ -2389,15 +2299,6 @@
 							<div class="popular__img">
 								<img src="img/pop6.jpg" alt="">
 							</div>
-							<div class="popular__amount">
-								<span>
-									<i class="fa fa-minus" aria-hidden="true"></i>
-								</span>
-								<input type="text">
-								<span>
-									<i class="fa fa-plus" aria-hidden="true"></i>
-								</span>
-							</div>
 							<div class="popular__name">
 								<p>Чашка для кальяна из<br> глины «Фаянс» № 1</p>
 							</div>
@@ -2424,15 +2325,6 @@
 							<div class="popular__img">
 								<img src="img/pop7.jpg" alt="">
 							</div>
-							<div class="popular__amount">
-								<span>
-									<i class="fa fa-minus" aria-hidden="true"></i>
-								</span>
-								<input type="text">
-								<span>
-									<i class="fa fa-plus" aria-hidden="true"></i>
-								</span>
-							</div>
 							<div class="popular__name">
 								<p>Кальян «Sirius»</p>
 							</div>
@@ -2457,15 +2349,6 @@
 							</div>
 							<div class="popular__img">
 								<img src="img/pop8.png" alt="">
-							</div>
-							<div class="popular__amount">
-								<span>
-									<i class="fa fa-minus" aria-hidden="true"></i>
-								</span>
-								<input type="text">
-								<span>
-									<i class="fa fa-plus" aria-hidden="true"></i>
-								</span>
 							</div>
 							<div class="popular__name">
 								<p>Кальян «Chrome»</p>
@@ -2495,15 +2378,6 @@
 							</div>
 							<div class="popular__img">
 								<img src="img/pop1.jpg" alt="">
-							</div>
-							<div class="popular__amount">
-								<span>
-									<i class="fa fa-minus" aria-hidden="true"></i>
-								</span>
-								<input type="text">
-								<span>
-									<i class="fa fa-plus" aria-hidden="true"></i>
-								</span>
 							</div>
 							<div class="popular__name">
 								<p>Кальян Алладин</p>
@@ -2610,12 +2484,7 @@
 					<button class="showmore">ПОКАЗАТЬ ВСЕ</button>
 				</div>
 				<div class="information">
-					<h2 class="catgoods__title">ПОЛЕЗНАЯ ИНФОРМАЦИЯ</h2>
-					<h3 id="ex1" class="subtitle">ИНФОРМАЦИЯ О КОМПАНИИ</h3>
-					<p class="information__p">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-					</p>
-					<h3 id="ex2" class="subtitle">ИЗ ЧЕГО СОСТОИТ КАЛЬЯН</h3>
+					<!-- <h3 id="ex2" class="subtitle">ИЗ ЧЕГО СОСТОИТ КАЛЬЯН</h3>
 					<div class="information__block">
 						<img src="img/info.jpg" class="information__imgtext">
 						<div class="information__item information__item_1">
@@ -2660,8 +2529,13 @@
 								<img src="img/line6.png" alt="">
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="information__box">
+						<h2 class="catgoods__title">ПОЛЕЗНАЯ ИНФОРМАЦИЯ</h2>
+						<h3 id="ex1" class="subtitle">ИНФОРМАЦИЯ О КОМПАНИИ</h3>
+						<p class="information__p">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+						</p>
 						<h3 id="ex3" class="subtitle">Какой кальян выбрать? </h3>
 						<p class="information__p information__p_2">
 							Каких только кальянов не существует. Различные по форме, дизайну, расцветке. Можно найти даже эксклюзивные ручные работы. И все они со своими особенностями и преимуществами. Кальян является символом восточной культуры. Этот курительный прибор есть практически в каждом баре и ночном клубе нашей страны.
@@ -4671,12 +4545,15 @@
 					<li>
 						<a href="">Гарантии</a>
 					</li>
+					<li>
+						<a href="">Конструктор</a>
+					</li>
 				</div>
 			</div>
 			<div class="header__side"><i class="fa fa-bars" aria-hidden="true"></i></div>
 			<div class="overlay overlay_2"></div>
 			<div class="header__logo">
-				<a href=""><img src="img/logo.png" alt=""></a>
+				<a href=""><img src="img/logo.svg" alt=""></a>
 			</div>
 			<div class="header__cont">
 				<div class="header__toogle">
@@ -4931,7 +4808,7 @@
 		<div class="wrapper">
 			<div class="footer__box">
 				<div class="header__logo">
-					<img src="img/logo.png" alt="">
+					<img src="img/logo.svg" alt="">
 				</div>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
 				<a href="tel:+8 (800) 555-35-35" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a><br>
