--- a/smoky/wishlist.html
+++ b/smoky/wishlist.html
@@ -1654,35 +1654,6 @@
 				<div class="sideconstructor">
 					<a href=""><img src="img/constructor.png" alt=""></a>
 				</div>
-				<div class="sideinfo">
-					<h2 class="sideinfo__title">полезная информация</h2>
-					<div class="sideinfo_box">
-						<div class="sideinfo__item">
-							<a href="#ex1">ИНФОРМАЦИЯ О КОМПАНИИ</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex2">ИЗ ЧЕГО СОСТОИТ КАЛЬЯН</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex3">КАКОЙ КАЛЬЯН ВЫБРАТЬ?</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex4">Классификация кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex5">Размеры кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-						<div class="sideinfo__item">
-							<a href="#ex6">Названия и виды кальянов</a>
-							<i class="fa fa-angle-right" aria-hidden="true"></i>
-						</div>
-					</div>
-				</div>
 				<div class="sidevideo">
 					<h2 class="sidevideo__title">видео</h2>
 					<div class="sidevideo__box sidevideo__box_1">
@@ -1805,7 +1776,7 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
+										<!-- <div class="popular__amount">
 											<span>
 												<i class="fa fa-minus" aria-hidden="true"></i>
 											</span>
@@ -1813,6 +1784,27 @@
 											<span>
 												<i class="fa fa-plus" aria-hidden="true"></i>
 											</span>
+										</div> -->
+										<div class="popular__name">
+											<p>Кальян Алладин</p>
+										</div>
+										<div class="popular__price pprice">
+											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
+											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
+										</div>
+										<a href=""><img src="" alt=""></a>
+									</div>
+								</div>
+								<div class="dropdown__boxitem">
+									<div class="popular__item">
+										<div class="popular__top">
+											<span class="popular__stiker">-25%</span>
+											<div class="popular__timer">
+												<span>20:30:46</span>
+											</div>
+										</div>
+										<div class="popular__img">
+											<img src="img/pop1.jpg" alt="">
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -1835,15 +1827,6 @@
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
 										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
 										</div>
@@ -1864,45 +1847,6 @@
 										</div>
 										<div class="popular__img">
 											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
-										</div>
-										<div class="popular__name">
-											<p>Кальян Алладин</p>
-										</div>
-										<div class="popular__price pprice">
-											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
-											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
-										</div>
-										<a href=""><img src="" alt=""></a>
-									</div>
-								</div>
-								<div class="dropdown__boxitem">
-									<div class="popular__item">
-										<div class="popular__top">
-											<span class="popular__stiker">-25%</span>
-											<div class="popular__timer">
-												<span>20:30:46</span>
-											</div>
-										</div>
-										<div class="popular__img">
-											<img src="img/pop1.jpg" alt="">
-										</div>
-										<div class="popular__amount">
-											<span>
-												<i class="fa fa-minus" aria-hidden="true"></i>
-											</span>
-											<input type="text">
-											<span>
-												<i class="fa fa-plus" aria-hidden="true"></i>
-											</span>
 										</div>
 										<div class="popular__name">
 											<p>Кальян Алладин</p>
@@ -2053,10 +1997,12 @@
 						<a href="">Избранное</a>
 					</div>
 					<div class="wishlist">
-						<h2 class="main__title">Избранное</h2>
-						<div class="wishlist__butts">
-							<button class="showmore">Очистить всё</button>
-							<button class="showmore">Купить всё</button>
+						<div class="wishlist__box">
+							<h2 class="main__title">Избранное</h2>
+							<div class="wishlist__butts">
+								<button class="showmore">Очистить всё</button>
+								<button class="showmore">Купить всё</button>
+							</div>
 						</div>
 						<div class="wishlist__filter">
 							<div class="sortby">
@@ -2131,15 +2077,6 @@
 								<div class="popular__img">
 									<img src="img/pop1.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян Алладин</p>
 								</div>
@@ -2170,15 +2107,6 @@
 								<div class="popular__img">
 									<img src="img/pop2.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Чашка для кальяна из<br> глины «Фаянс» № 1</p>
 								</div>
@@ -2208,15 +2136,6 @@
 								<div class="popular__img">
 									<img src="img/pop3.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян «Sirius»</p>
 								</div>
@@ -2244,15 +2163,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop4.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян «Chrome»</p>
@@ -2283,15 +2193,6 @@
 								<div class="popular__img">
 									<img src="img/pop3.jpg" alt="">
 								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
-								</div>
 								<div class="popular__name">
 									<p>Кальян «Sirius»</p>
 								</div>
@@ -2319,15 +2220,6 @@
 								</div>
 								<div class="popular__img">
 									<img src="img/pop4.jpg" alt="">
-								</div>
-								<div class="popular__amount">
-									<span>
-										<i class="fa fa-minus" aria-hidden="true"></i>
-									</span>
-									<input type="text">
-									<span>
-										<i class="fa fa-plus" aria-hidden="true"></i>
-									</span>
 								</div>
 								<div class="popular__name">
 									<p>Кальян «Chrome»</p>
@@ -2545,7 +2437,7 @@
 						<a href="">Каталог</a>
 						<i class="fa fa-caret-up" aria-hidden="true"></i>
 					</li>
-					<nav class="sidenav__item">
+					<!-- <nav class="sidenav__item">
 						<ul>
 							<li>
 								<div class="sidenav__text">
@@ -4169,7 +4061,7 @@
 								<img src="img/icon_more-g.svg" alt="" class="sidenav__more">
 							</li>
 						</ul>
-					</nav>
+					</nav> -->
 					<li>
 						<a href="">Главная</a>
 					</li>
@@ -4194,12 +4086,15 @@
 					<li>
 						<a href="">Гарантии</a>
 					</li>
+					<li>
+						<a href="">Конструктор</a>
+					</li>
 				</div>
 			</div>
 			<div class="header__side"><i class="fa fa-bars" aria-hidden="true"></i></div>
 			<div class="overlay overlay_2"></div>
 			<div class="header__logo">
-				<a href=""><img src="img/logo.png" alt=""></a>
+				<a href=""><img src="img/logo.svg" alt=""></a>
 			</div>
 			<div class="header__cont">
 				<div class="header__toogle">
@@ -4454,7 +4349,7 @@
 		<div class="wrapper">
 			<div class="footer__box">
 				<div class="header__logo">
-					<img src="img/logo.png" alt="">
+					<img src="img/logo.svg" alt="">
 				</div>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
 				<a href="tel:+8 (800) 555-35-35" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a><br>
